# testing

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  main.cpp
source/: arithmetic_test.cpp  comparison_test.cpp  constructors_test.cpp  index_assigment_operator_test.cpp  math_methods_test.cpp  method_test.cpp  output_test.cpp  test.cpp
test/: CMakeLists.txt
